fix overflow issue on landscape

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -210,6 +210,9 @@ body {
 }
 
 @media screen and (max-height: 525px) {
+  .main {
+    height: auto;
+  }
   .mohawk {
     display: none;
   }
